fix mobile icons alignment

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -224,9 +224,15 @@ main.container {
   }
 
   .card-title i, .card-title img {
-    vertical-align: text-top;
+    vertical-align: text-bottom;
     font-size: 36px;
     margin-right: 10px;
+  }
+
+  @media (min-width: 768px) {
+    .card-title i, .card-title img {
+      vertical-align: text-top; /* fix mobile */
+    }
   }
 
 @font-face {
